# dobbe-discord-rs

./: Cargo.toml  README.md  rules_config.toml  sample.env
src/: commands.rs  data.rs  main.rs
src/commands/: rules.rs
